Fixing layout issues on mobile devices

--- a/app/_assets/stylesheets/page.less
+++ b/app/_assets/stylesheets/page.less
@@ -1,8 +1,14 @@
 .page {
   &.v2 {
     .container {
+      padding: 0;
+
       @media screen and (max-width: 1600px) {
         width: 99%;
+      }
+
+      @media screen and (max-width: 1100px) {
+        padding: 8px;
       }
     }
 
@@ -10,6 +16,15 @@
       margin-top: 55px;
       padding-top: 40px;
       padding-bottom: 32px;
+
+      nav.docs-navigation {
+        padding-left: 8px;
+        padding-right: 8px;
+
+        @media (max-width: 1100px) {
+          padding: 8px 8px 0;
+        }
+      }
 
       .title-version-search-container {
         display: flex;
@@ -37,10 +52,45 @@
           opacity: 0.6;
         }
       }
+
+      @media (max-width: 1100px) {
+        padding-top: 24px;
+      }
     }
 
     .page-content-container {
       padding-left: 285px;
+
+      .toggles {
+        display: flex;
+        position: sticky;
+        top: 60px;
+        justify-content: space-between;
+        height: 0;
+        overflow: hidden;
+
+        .sidebar-toggle {
+          display: block;
+          visibility: hidden;
+          margin-left: 0;
+        }
+
+        i {
+          padding: 8px;
+          color: rgba(0, 0, 0, 0.35);
+          font-size: 22px;
+        }
+
+        @media screen and (max-width: 1080px) {
+          height: auto;
+        }
+
+        @media screen and (max-width: 800px) {
+          .sidebar-toggle {
+            visibility: visible;
+          }
+        }
+      }
 
       .page-content {
         padding-left: 75px;
@@ -100,9 +150,14 @@
 
         @media screen and (max-width: 800px) {
           .title-version-search-container {
+            justify-content: center;
             margin-top: 50px;
             padding-left: 32px;
             padding-right: 32px;
+
+            .page-header-title {
+              text-align: center;
+            }
           }
         }
       }
@@ -140,6 +195,7 @@
 
       .page-content {
         padding-left: 32px;
+        padding-right: 32px;
 
         .content {
           padding-top: 32px;
@@ -157,17 +213,18 @@
         border-right: 1px solid @gray;
         margin-right: 25px;
       }
-    }
-  }
 
-  &:not(.v2) {
-    .page-content-container {
-      padding-right: 230px;
+      @media (max-width: 800px) {
+        padding-left: 0;
+        padding-right: 0;
 
-      .page-content {
-        padding-right: 50px;
-        border-right: 1px solid @gray;
-        margin-right: 25px;
+        .page-content {
+          padding: 0;
+          border-right: none;
+          border-left: none;
+          margin-right: 0;
+          margin-left: 0;
+        }
       }
     }
   }
