--- a/app/_assets/stylesheets/pages/docs.less
+++ b/app/_assets/stylesheets/pages/docs.less
@@ -34,6 +34,12 @@
     @media (max-width: 1100px) {
       margin-bottom: 56px;
     }
+
+    @media (max-width: 768px) {
+      >a {
+        font-size: 14px;
+      }
+    }
   }
 }
 
@@ -42,21 +48,52 @@
   right: 0;
 
   &.v2 {
+    position: relative;
+    right: auto;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    padding-bottom: 16px;
+
     a {
       color: rgba(0, 0, 0, 0.35);
       padding: 0;
       border-bottom: none;
       font-weight: 500;
 
+      i {
+        padding: 8px 12px;
+        display: none;
+        margin-top: -12px;
+        margin-left: 4px;
+        font-size: 18px;
+      }
+
       &:hover {
         color: rgba(0, 0, 0, 0.5);
+      }
+    }
+
+    @media (max-width: 1100px) {
+      top: auto;
+      left: auto;
+    }
+    @media (max-width: 768px) {
+      a {
+        i {
+          display: block;
+        }
+
+        span {
+          display: none;
+        }
       }
     }
   }
 
   @media (max-width: 1100px) {
     top: 135px;
-    left: 0px;
+    left: 0;
   }
   @media (max-width: 400px) {
     left: 20px;
@@ -272,16 +309,31 @@
   display: flex;
   justify-content: center;
   margin-top: 32px;
+
+  @media (max-width: 476px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .docs-sidebar {
   float: left;
   width: 285px;
   position: sticky;
-  top: 56px;
+  top: 54px;
   height: ~"calc(100vh - 56px)";
   border-right: 1px solid @gray;
   overflow-y: auto;
+
+  .close-sidebar {
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    color: rgba(0, 0, 0, 0.20);
+    font-size: 20px;
+    text-align: right;
+  }
 
   &::-webkit-scrollbar {
     width: 2px;
@@ -319,7 +371,6 @@
 
   @media (max-width: 800px) {
     position: fixed;
-    top: 56px;
     left: 0;
     padding: 0;
     height: ~"calc(100% - 56px)";
@@ -331,6 +382,11 @@
     transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
     transition: all 300ms ease-in-out;
+
+    .close-sidebar {
+      height: auto;
+      padding: 16px;
+    }
 
     &.sidebar-open {
       transform: translateX(0);
@@ -386,9 +442,19 @@
   width: 300px;
   padding: 32px 16px;
   position: sticky;
-  top: 56px;
+  top: 54px;
   height: ~"calc(100vh - 120px)";
   overflow-y: auto;
+
+  .close-sidebar {
+    position: absolute;
+    visibility: hidden;
+    right: 0;
+    top: 0;
+    padding: 16px;
+    color: rgba(0, 0, 0, 0.20);
+    font-size: 20px;
+  }
 
   .docs-toc-title {
     font-size: 14px;
@@ -432,6 +498,25 @@
   }
 
   @media screen and (max-width: 1080px) {
-    display: none;
+    position: fixed;
+    right: 0;
+    padding: 16px 24px;
+    height: ~"calc(100% - 56px)";
+    box-shadow: 0 12px 15px rgba(0, 0, 0, 0.15);
+    border: 0 none;
+    background: #fff;
+    overflow-y: auto;
+    z-index: 100;
+    transform: translateX(-100%);
+    -webkit-transform: translateX(100%);
+    transition: all 300ms ease-in-out;
+
+    .close-sidebar {
+      visibility: visible;
+    }
+
+    &.sidebar-open {
+      transform: translateX(0);
+    }
   }
 }
